--- a/src/Hyper/AdsBundle/Resources/views/Default/rules.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Default/rules.html.twig
@@ -4,16 +4,21 @@
 {% endblock %}
 {% block body %}
     <h2>{{ 'rules'|babel }}</h2>
-    <ol class="rules">
-        <li>Serwery <em>hyperreal.info</em> są ulokowane poza terytorium Polski. Jednakże używając ich, podlegasz prawu kraju, w którym fizycznie się znajdujesz.</li>
-        <li><strong>Za każdą reklamę zamieszczoną na</strong> <em>hyperreal.info</em> <strong>odpowiada wyłącznie ogłoszeniodawca</strong>. Publikacja reklam odbywa się automatycznie, bez wiedzy i akceptacji serwisu <em>hyperreal.info</em>.</li>
-        <li><em>Hyperreal.info</em> nie przechowuje logów serwerów, jedyną informacją jaką dysponujemy, jest adres email podany podczas zakładania konta. W przypadku pisemnego żądania organów upoważnionych (prokuratura lub sąd), nie zawahamy się przed podaniem tego adresu.</li>
-        <li>Wszystkie transakcje przeprowadzane są za pomocą Bitcoinów (BTC), które zapewniają wysoki poziom anonimowości i nie podlegają instytucjom bankowym.</li>
-        <li><em>Hyperreal.info</em> gwarantuje sobie niepodważalne prawo do usunięcia dowolnej reklamy w dowolnym momencie, bez zwrotu BTC. Zobowiązujemy się jednakże do użycia tego prawa wyłącznie w drastycznych przypadkach.</li>
-        <li><em>Hyperreal.info</em> dokłada wszelkich starań, aby reklamy wyświetlane były 24 godziny na dobę, 365 dni w tygodniu, jednakże nie dajemy na to żadnych gwarancji.</li>
-        <li>Reklamy opłacone w wersji forum dla przeglądarek na komputerach stacjonarnych, nie są wyświetlane w wersjach mobilnych na tablety i smartfony (i odwrotnie).</li>
-        <li>Zakładając konto na serwerze reklamowym <em>hyperreal.info</em>, akceptujesz bez uwag niniejszy regulamin i zobowiązujesz się zapoznawać się regularnie z jego ewentualnymi zmianami. W przypadku braku akceptacji zmian w regulaminie, <strong>natychmiast</strong> skasuj wszystkie zamieszczone przez siebie reklamy i zaprzestań używania serwisu.</li>
-        <li>Przyjmujesz do wiadomości, że używamy cookies.</li>
-        <li><strong>Najważniejszy dla nas jest zadowolony klient.</strong> Jeśli masz jakiekolwiek uwagi, napisz do nas niezwłocznie: <a class="mail-link" href="mailto:reklama@hyperreal.biz">reklama@hyperreal.biz</a>.</li>
+	<div class="panel panel-default">
+	<!-- Default panel contents -->
+	<div class="panel-body">
+	<p>Regulamin ogłoszeń w serwisach hyperreala</p>
+
+    <ol class="list-group">
+        <li class="list-group-item">Serwery <em>hyperreal.info</em> są ulokowane poza terytorium Polski. Jednakże używając ich, podlegasz prawu kraju, w którym fizycznie się znajdujesz.</li>
+        <li class="list-group-item"><strong>Za każdą reklamę zamieszczoną na</strong> <em>hyperreal.info</em> <strong>odpowiada wyłącznie ogłoszeniodawca</strong>. Publikacja reklam odbywa się automatycznie, bez wiedzy i akceptacji serwisu <em>hyperreal.info</em>.</li>
+        <li class="list-group-item"><em>Hyperreal.info</em> nie przechowuje logów serwerów, jedyną informacją jaką dysponujemy, jest adres email podany podczas zakładania konta. W przypadku pisemnego żądania organów upoważnionych (prokuratura lub sąd), nie zawahamy się przed podaniem tego adresu.</li>
+        <li class="list-group-item">Wszystkie transakcje przeprowadzane są za pomocą Bitcoinów (BTC), które zapewniają wysoki poziom anonimowości i nie podlegają instytucjom bankowym.</li>
+        <li class="list-group-item"><em>Hyperreal.info</em> gwarantuje sobie niepodważalne prawo do usunięcia dowolnej reklamy w dowolnym momencie, bez zwrotu BTC. Zobowiązujemy się jednakże do użycia tego prawa wyłącznie w drastycznych przypadkach.</li>
+        <li class="list-group-item"><em>Hyperreal.info</em> dokłada wszelkich starań, aby reklamy wyświetlane były 24 godziny na dobę, 365 dni w tygodniu, jednakże nie dajemy na to żadnych gwarancji.</li>
+        <li class="list-group-item">Reklamy opłacone w wersji forum dla przeglądarek na komputerach stacjonarnych, nie są wyświetlane w wersjach mobilnych na tablety i smartfony (i odwrotnie).</li>
+        <li class="list-group-item">Zakładając konto na serwerze reklamowym <em>hyperreal.info</em>, akceptujesz bez uwag niniejszy regulamin i zobowiązujesz się zapoznawać się regularnie z jego ewentualnymi zmianami. W przypadku braku akceptacji zmian w regulaminie, <strong>natychmiast</strong> skasuj wszystkie zamieszczone przez siebie reklamy i zaprzestań używania serwisu.</li>
+        <li class="list-group-item">Przyjmujesz do wiadomości, że używamy cookies.</li>
+        <li class="list-group-item"><strong>Najważniejszy dla nas jest zadowolony klient.</strong> Jeśli masz jakiekolwiek uwagi, napisz do nas niezwłocznie: <a class="mail-link" href="mailto:reklama@hyperreal.biz">reklama@hyperreal.biz</a>.</li>
     </ol>
 {% endblock %}
