--- a/src/Hyper/AdsBundle/Resources/views/Default/tutorial.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Default/tutorial.html.twig
@@ -63,7 +63,7 @@ Czemu wybraliśmy bitcoiny (BTC) jako walutę opłacania reklam?
 			<div class="panel-body"> <!-- ACCORDION PANEL -->
 				<p>Bitcoiny do zakupu reklam na hyperrealu można kupić na wiele sposobów. My sprawdziliśmy jeden z nich, jest on polecany na polskim forum bitcoin. Prosimy jednak zwrócić uwagę, że hyperreal w żaden sposób nie odpowiada za wasze transakcje zakupu bitcoinów!</p>
 				<div class="alert alert-info">
-					<p>Hyperreal do obsługi BTC używa portfela Electrum: <a href="http://electrum.org/">http://electrum.org/</a>, zdecydowanie go polecamy. Pamiętajcie, aby nie przechowywać BTC na cudzych serwerach, gdyż w żaden sposób nie można ufać w to, że właściciele tych serwerów są wiarygodni i w ten sposób możecie wtopić swoją kasę. Electrum gwarantuje, że wasza kasa należy do was i do nikogo innego. Jedyne, co musicie pamiętać, to hasło (seed) do waszego portfela Electrum - jeśli go zapomnicie, kasa ginie na zawsze!</p>
+					<p>Hyperreal do obsługi BTC używa portfela Electrum: <a href="http://electrum.org/">http://electrum.org/</a>, zdecydowanie go wam polecamy. Pamiętajcie, aby nie przechowywać BTC na cudzych serwerach, gdyż w żaden sposób nie można ufać w to, że właściciele tych serwerów są wiarygodni. Korzystając z potfeli webowych możecie wtopić swoją kasę, wasze fundusze są w pełni zależne od właściciela serwera i jego kondycji finansowej. natomiast portfel Electrum gwarantuje, że wasza kasa należy do was i do nikogo innego. Jedyne, co musicie pamiętać, to hasło (seed) do waszego portfela Electrum - jeśli go zapomnicie, kasa znika na zawsze!</p>
 				</div>
 			</div> <!-- END OF ACCORDION PANEL -->
 		</div> <!-- END OF ACCORDION BODY -->
@@ -121,26 +121,25 @@ Czemu wybraliśmy bitcoiny (BTC) jako walutę opłacania reklam?
 		</div> <!-- END OF ACCORDION BODY -->
 	</div> <!-- END OF ACCORDION SINGLE BLOCK -->
 
-</div> <!-- END OF ACCORDION -->
+<h2>Obsługa systemu reklamowego hyperreala</h2>
 
-	<div class="row">
-		<div class="col-md-12">
+<div class="alert alert-info">
+	<p>System do samodzielnej obsługi reklam znajduje się pod adresem <a href="https://mak.hyperreal.biz/">https://mak.hyperreal.biz/</a>.
+</div>
 
-			<h2>Obsługa systemu reklamowego hyperreala</h2>
+<div class="panel-group" id="accordion"> <!-- ACCORDION -->
 
-			<div class="alert alert-info">
-				<p>System do samodzielnej obsługi reklam znajduje się pod adresem <a href="https://mak.hyperreal.biz/">https://mak.hyperreal.biz/</a>.
-			</div>
-		</div>
-	</div>
+	<div class="panel panel-default"> <!-- ACCORDION SINGLE BLOCK -->
+		<div class="panel-heading"> <!-- ACCORDION HEADING -->
+			<h4 class="panel-title">
+				<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFive">
+			Założenie konta
+				</a>
+			</h4>
+		</div> <!-- END OF ACCORDION HEADING -->
 
-	<div class="row">
-		<div class="col-md-12">
-
-			<h3>Założenie konta</h3>
-
-		</div>
-	</div>
+		<div id="collapseFive" class="panel-collapse collapse in"> <!-- ACCORDION BODY -->
+			<div class="panel-body"> <!-- ACCORDION PANEL -->
 
 	<div class="row">
 
@@ -164,13 +163,22 @@ Czemu wybraliśmy bitcoiny (BTC) jako walutę opłacania reklam?
 			</a>
 		</div>
 	</div>
+			</div> <!-- END OF ACCORDION PANEL -->
+		</div> <!-- END OF ACCORDION BODY -->
+	</div> <!-- END OF ACCORDION SINGLE BLOCK -->
 
-	<div class="row">
-		<div class="col-md-12">
 
-		<h3>Lista stref</h3>
-		</div>
-	</div>
+	<div class="panel panel-default"> <!-- ACCORDION SINGLE BLOCK -->
+		<div class="panel-heading"> <!-- ACCORDION HEADING -->
+			<h4 class="panel-title">
+				<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseSix">
+		Lista stref i cennik
+				</a>
+			</h4>
+		</div> <!-- END OF ACCORDION HEADING -->
+
+		<div id="collapseSix" class="panel-collapse collapse in"> <!-- ACCORDION BODY -->
+			<div class="panel-body"> <!-- ACCORDION PANEL -->
 
 	<div class="row">
 
@@ -204,16 +212,23 @@ Czemu wybraliśmy bitcoiny (BTC) jako walutę opłacania reklam?
 			<p>Zwróć uwagę, że cennik dotyczy jednego dnia emisji. Od ciebie zależy, na jak długo wykupisz banner, okres ten może być dowolny, od jednego dnia do maksymalnie roku. Pamiętaj, że aż do momentu skutecznego opłacenia bannera, ktoś inny może cię wyprzedzić i zakupić swój banner, podobnie jak to ma miejsce przy zakupie na przykład biletu lotniczego.</p>
 		</div>
 	</div>
+			</div> <!-- END OF ACCORDION PANEL -->
+		</div> <!-- END OF ACCORDION BODY -->
+	</div> <!-- END OF ACCORDION SINGLE BLOCK -->
 
-	<div class="row">
-		<div class="col-md-12">
+	<div class="panel panel-default"> <!-- ACCORDION SINGLE BLOCK -->
+		<div class="panel-heading"> <!-- ACCORDION HEADING -->
+			<h4 class="panel-title">
+				<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven">
+			Dodanie bannera
+				</a>
+			</h4>
+		</div> <!-- END OF ACCORDION HEADING -->
 
-			<h3>Dodanie bannera</h3>
+		<div id="collapseSeven" class="panel-collapse collapse in"> <!-- ACCORDION BODY -->
+			<div class="panel-body"> <!-- ACCORDION PANEL -->
 
 			<p>W momencie, w którym zdecydowałeś się na określony banner, sprawdź dokładnie jego maksymalny rozmiar. System zaakceptuje mniejszy banner niż podana wartość maksymalna bannera, ale nie zaakceptuje większego.</p>
-
-		</div>
-	</div>
 
 	<div class="row">
 
@@ -252,12 +267,21 @@ Czemu wybraliśmy bitcoiny (BTC) jako walutę opłacania reklam?
 		</div>
 	</div>
 
-	<div class="row">
-		<div class="col-md-12">
+			</div> <!-- END OF ACCORDION PANEL -->
+		</div> <!-- END OF ACCORDION BODY -->
+	</div> <!-- END OF ACCORDION SINGLE BLOCK -->
 
-			<h3>Opłacenie bannera</h3>
-		</div>
-	</div>
+	<div class="panel panel-default"> <!-- ACCORDION SINGLE BLOCK -->
+		<div class="panel-heading"> <!-- ACCORDION HEADING -->
+			<h4 class="panel-title">
+				<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseEight">
+			Opłacenie bannera
+				</a>
+			</h4>
+		</div> <!-- END OF ACCORDION HEADING -->
+
+		<div id="collapseEight" class="panel-collapse collapse in"> <!-- ACCORDION BODY -->
+			<div class="panel-body"> <!-- ACCORDION PANEL -->
 
 	<div class="row">
 		<div class="col-md-9">
@@ -305,8 +329,8 @@ Czemu wybraliśmy bitcoiny (BTC) jako walutę opłacania reklam?
 		</div>
 		<div class="col-md-3">
 
-			<a href="{{ asset('bundles/hyperads/images/bitpay-payment-initial-screen.png') }}" class="fancybox" title="">
-			<img src="{{ asset('bundles/hyperads/images/bitpay-payment-initial-screen-M.png') }}">
+			<a href="{{ asset('bundles/hyperads/images/bitpay-invoice-to-be-paid.png') }}" class="fancybox" title="">
+			<img src="{{ asset('bundles/hyperads/images/bitpay-invoice-to-be-paid-M.png') }}">
 			</a>
 		</div>
 	</div>
@@ -353,7 +377,7 @@ Czemu wybraliśmy bitcoiny (BTC) jako walutę opłacania reklam?
 	<div class="row">
 		<div class="col-md-9">
 
-			<p>W tym momencie jesteśmy gotowi do przelania bitcoinów z naszego konta w Bitcurex do hyperreala. Bitcurex pobiera niewielką, symboliczną opłatę transakcyjną, która jest wymagana do sprawnego transferu bitcoinów: 0.005. Zlecenie wykonujemy zgodnie z obrazkiem obok, oczywiście wpisując tam wartość zgodną z opłatą za banner:</p>
+			<p>W tym momencie jesteśmy gotowi do przelania bitcoinów z naszego konta w Bitcurex do hyperreala. Bitcurex pobiera niewielką, symboliczną opłatę transakcyjną, która jest wymagana do sprawnego transferu bitcoinów: 0.001. Zlecenie wykonujemy zgodnie z obrazkiem obok, oczywiście wpisując tam wartość zgodną z opłatą za banner:</p>
 		</div>
 		<div class="col-md-3">
 
@@ -370,8 +394,8 @@ Czemu wybraliśmy bitcoiny (BTC) jako walutę opłacania reklam?
 		</div>
 		<div class="col-md-3">
 
-			<a href="{{ asset('bundles/hyperads/images/bitpay-payment-received.png') }}" class="fancybox" title="">
-			<img src="{{ asset('bundles/hyperads/images/bitpay-payment-received-M.png') }}">
+			<a href="{{ asset('bundles/hyperads/images/bitpay-invoice-paid.png') }}" class="fancybox" title="">
+			<img src="{{ asset('bundles/hyperads/images/bitpay-invoice-paid-M.png') }}">
 			</a>
 		</div>
 	</div>
@@ -379,10 +403,17 @@ Czemu wybraliśmy bitcoiny (BTC) jako walutę opłacania reklam?
 	<div class="row">
 		<div class="col-md-12">
 
-			<p>To wszystko! Za drugim razem pójdzie ci znacznie szybciej i łatwiej, a za trzecim będziesz mistrzem bitcoinów :-)</p>
+			<p>To wszystko! Jak tylko otrzymamy potwierdzenie, że banner został opłacony, zostanie opublikowany zgodnie z datami, które wskazałeś w zamówieniu. Potwierdzenie zwykle otrzymujemy w czasie krótszym niż pół godziny od momentu opłacenia.</p>
+			<div class="alert alert-info">
+				<p>Za drugim razem pójdzie ci znacznie szybciej i łatwiej, a za trzecim będziesz mistrzem bitcoinów :-)</p>
+			</div>
 		</div>
 	</div>
-	
+			</div> <!-- END OF ACCORDION PANEL -->
+		</div> <!-- END OF ACCORDION BODY -->
+	</div> <!-- END OF ACCORDION SINGLE BLOCK -->
+</div> <!-- END OF ACCORDION -->
+
 </div>
 {% endblock %}
 
