--- a/src/Hyper/AdsBundle/Resources/public/css/main.css
+++ b/src/Hyper/AdsBundle/Resources/public/css/main.css
@@ -7300,6 +7300,7 @@ input[type="color"]:focus,
   -webkit-box-shadow: none;
   box-shadow: none;
 }
+/* (C) hyperreal.info 2014 */
 body {
   padding: 60px 0 20px 0;
 }
@@ -7311,6 +7312,25 @@ li.nav-header {
   padding-bottom: 5px;
   padding-right: 0px;
   padding-left: 0px;
+}
+.navbar {
+  zoom: 1;
+  filter: alpha(opacity=50);
+  opacity: 0.5;
+  background: green;
+  color: white;
+}
+html > body > nav.navbar.navbar-fixed-top > div.container > ul.nav.navbar-nav > li > a {
+  color: white;
+}
+html > body > nav.navbar.navbar-fixed-top > div.navbar-header > a.navbar-brand {
+  color: white;
+}
+.fancybox > img {
+  padding-top-width: 5px;
+  padding-right-width-value: 5px;
+  padding-bottom-width: 5px;
+  padding-left-width-value: 5px;
 }
 ul.no-buttons {
   list-style-type: none;
