--- a/src/Hyper/AdsBundle/Resources/public/less/global.less
+++ b/src/Hyper/AdsBundle/Resources/public/less/global.less
@@ -1,3 +1,4 @@
+/* (C) hyperreal.info 2014 */
 
 @icon-font-path:          "/components/bootstrap/fonts/";
 @fa-font-path:            "/components/font-awesome/fonts/";
@@ -15,6 +16,29 @@ li.nav-header {
 	padding-bottom:5px;
 	padding-right:0px;
 	padding-left:0px;
+}
+
+.navbar {
+	zoom: 1;
+	filter: alpha(opacity=50);
+	opacity: 0.5;
+	background: green;
+	color: white;
+}
+
+html > body > nav.navbar.navbar-fixed-top > div.container > ul.nav.navbar-nav > li > a {
+	color: white;
+}
+
+html > body > nav.navbar.navbar-fixed-top > div.navbar-header > a.navbar-brand {
+	color: white;
+}
+
+.fancybox > img {
+	padding-top-width: 5px;
+	padding-right-width-value: 5px;
+	padding-bottom-width: 5px;
+	padding-left-width-value: 5px;
 }
 
 ul.no-buttons {
