--- a/src/Hyper/AdsBundle/Resources/views/Default/tutorial.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Default/tutorial.html.twig
@@ -210,6 +210,18 @@ Czemu wybraliśmy bitcoiny (BTC) jako walutę opłacania reklam?
 			<p>Wszystkie bannery rotują się w strefie z innymi ogłoszeniodawcami, maksymalnie w stosunku 1:5 czyli twój banner będzie pojawiał się średnio maksymalnie co pięć wyświetleń strony, jeśli wszystkie bannery w strefie są wykupione. Jeśli chcesz zająć określoną strefę wyłącznie dla siebie, musisz zatem przygotować pięć bannerów i opłacić je oddzielnie - mogą być to te same bannery, ale musisz wgrać je oddzielnie.<p>
 
 			<p>Zwróć uwagę, że cennik dotyczy jednego dnia emisji. Od ciebie zależy, na jak długo wykupisz banner, okres ten może być dowolny, od jednego dnia do maksymalnie roku. Pamiętaj, że aż do momentu skutecznego opłacenia bannera, ktoś inny może cię wyprzedzić i zakupić swój banner, podobnie jak to ma miejsce przy zakupie na przykład biletu lotniczego.</p>
+
+			<div class="alert alert-warning">
+        			<div class="row">
+                			<div class="col-md-1">
+                        			<p><i class="fa fa-btc fa-3x"></i></p>
+                			</div>
+                			<div class="col-md-11">
+                        			<p>Cena w strefie wzrasta wraz z ilością zapełnionych bannerów, podobnie jak to ma się z biletami w liniach lotniczych! Aby kupić taniej, wykup baner wcześniej niż konkurencja.</p>
+                			</div>
+        			</div>
+			</div>
+
 		</div>
 	</div>
 			</div> <!-- END OF ACCORDION PANEL -->
@@ -309,23 +321,16 @@ Czemu wybraliśmy bitcoiny (BTC) jako walutę opłacania reklam?
 	</div>
 
 	<div class="row">
-		<div class="col-md-9">
+		<div class="col-md-12">
 
-			<p>Zanim przejdziesz do transakcji, ustal swój adres zwrotny. Adres ten będzie użyty przez naszego pośrednika płatniczego, Mt.Gox, w dwóch wypadkach: a) gdybyś przelał więcej BTC niż wymaga to transakcja zakupu bannera, b) gdyby transakcja z rozmaitych powodów technicznych się nie powiodła. Dla przykładu, twój adres zwrotny w giełdzie Bitcurex, jest widoczny pod adresem <a href="https://pln.bitcurex.com/zasilenie-konta">https://pln.bitcurex.com/zasilenie-konta</a> - przykładowy adres jest widoczny na obrazku onok (oczywiście w swojej transakcji używaj własnego adresu, a nie przykładowego z obrazka!!):</p>
 			<p>Jeśli posługujesz się portfelem Electrum, przed transakcjami z Hyperrealem, zapoznaj się z jego instrukcją obsługi.</p>
-		</div>
-		<div class="col-md-3">
-
-			<a href="{{ asset('bundles/hyperads/images/bitcurex-adres-zwrotny.png/') }}" class="fancybox" title="">
-			<img src="{{ asset('bundles/hyperads/images/bitcurex-adres-zwrotny-M.png') }}">
-			</a>
 		</div>
 	</div>
 
 	<div class="row">
 		<div class="col-md-9">
 
-			<p>Po ustaleniu adresu zwrotnego, możemy kontynuować płatność. Z adresu mak.hyperreal.biz przenosimy się do systemu płatności BitPay, który pośredniczy w transakcji. Ekran będzie teraz wyglądał podobnie do tego obok. Widzimy na nim również dokładną wartość bitcoinów, które należy zapłacić za reklamę. BitPay nie pobiera od ciebie prowizji za transakcję.</p>
+			<p>Możemy zatem realizować płatność. Z adresu mak.hyperreal.biz przenosimy cię do systemu płatności BitPay, który pośredniczy w transakcji. Ekran będzie teraz wyglądał podobnie do tego obok. Widzimy na nim również dokładną wartość bitcoinów, które należy zapłacić za reklamę. BitPay nie pobiera od ciebie prowizji za transakcję, wpłać kwotę widoczną na ekranie. Jeśli wpłacisz mniej, to płatność nie zostanie zrealizowana, dopóki nie dopłacisz brakującej kwoty na ten sam adres. Można przeprowadzać kilka przelewów, ważne, aby na końcu kwota precyzyjnie się zgadzała. Postaraj się nie wpłacać więcej, gdyż rodzi to biurokratyczne problemy ze strony pośrednika transakcji.</p>
 		</div>
 		<div class="col-md-3">
 
@@ -377,7 +382,7 @@ Czemu wybraliśmy bitcoiny (BTC) jako walutę opłacania reklam?
 	<div class="row">
 		<div class="col-md-9">
 
-			<p>W tym momencie jesteśmy gotowi do przelania bitcoinów z naszego konta w Bitcurex do hyperreala. Bitcurex pobiera niewielką, symboliczną opłatę transakcyjną, która jest wymagana do sprawnego transferu bitcoinów: 0.001. Zlecenie wykonujemy zgodnie z obrazkiem obok, oczywiście wpisując tam wartość zgodną z opłatą za banner:</p>
+			<p>W tym momencie jesteśmy gotowi do przelania bitcoinów z naszego konta w Bitcurex do hyperreala. Bitcurex pobiera niewielką, symboliczną opłatę transakcyjną, która jest wymagana do sprawnego transferu bitcoinów, zwykle 0.0001. Zlecenie wykonujemy zgodnie z obrazkiem obok, oczywiście wpisując tam wartość zgodną z opłatą za banner:</p>
 		</div>
 		<div class="col-md-3">
 
