--- a/src/Hyper/AdsBundle/Resources/public/less/global.less
+++ b/src/Hyper/AdsBundle/Resources/public/less/global.less
@@ -34,11 +34,8 @@ html > body > nav.navbar.navbar-fixed-top > div.navbar-header > a.navbar-brand {
 	color: white;
 }
 
-.fancybox > img {
-	padding-top-width: 5px;
-	padding-right-width-value: 5px;
-	padding-bottom-width: 5px;
-	padding-left-width-value: 5px;
+a.fancybox img {
+	border: 5px solid transparent;
 }
 
 ul.no-buttons {
