max_banners_in_zone is now configurable

--- a/src/Hyper/AdsBundle/Resources/views/User/Banner/payInZone.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/User/Banner/payInZone.html.twig
@@ -26,7 +26,7 @@
 </div>
 <div class="row">
     <ol class="text-muted payment-info">
-        <li>Odliczono dni, w których banner masz już wykupiony, oraz te, w których maksymalna liczba bannerów w strefie (5) jest już przekroczona;</li>
+        <li>Odliczono dni, w których banner masz już wykupiony, oraz te, w których maksymalna liczba bannerów w strefie ({{ maxBannersInZone }}) jest już przekroczona;</li>
         <li>Jest to orientacyjna kwota, nie należy się nią ściśle sugerować;</li>
         <li>Są to dni, w których Twój banner nie będzie wyświetlany ze względu na przekroczoną liczbę dopuszczalnych bannerów w strefie (5). Zauważ, że cena jest również dopasowana do tej liczby - <strong>nie zapłacisz za dni, w czasie których Twój banner nie będzie widoczny</strong>.</li>
     </ol>
