--- a/src/Hyper/AdsBundle/Resources/views/Default/tutorial.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Default/tutorial.html.twig
@@ -331,6 +331,16 @@ Czemu wybraliśmy bitcoiny (BTC) jako walutę opłacania reklam?
 		<div class="col-md-9">
 
 			<p>Możemy zatem realizować płatność. Z adresu mak.hyperreal.biz przenosimy cię do systemu płatności BitPay, który pośredniczy w transakcji. Ekran będzie teraz wyglądał podobnie do tego obok. Widzimy na nim również dokładną wartość bitcoinów, które należy zapłacić za reklamę. BitPay nie pobiera od ciebie prowizji za transakcję, wpłać kwotę widoczną na ekranie. Jeśli wpłacisz mniej, to płatność nie zostanie zrealizowana, dopóki nie dopłacisz brakującej kwoty na ten sam adres. Można przeprowadzać kilka przelewów, ważne, aby na końcu kwota precyzyjnie się zgadzała. Postaraj się nie wpłacać więcej, gdyż rodzi to biurokratyczne problemy ze strony pośrednika transakcji.</p>
+			<div class="alert alert-warning">
+        			<div class="row">
+                			<div class="col-md-1">
+                        			<p><i class="fa fa-bell fa-3x"></i></p>
+                			</div>
+                			<div class="col-md-11">
+                        			<p>Na zapłacenie faktury masz tylko 2 godziny od momentu złożenia zamówienia! W opisie faktury widać godzinę, do której jest ważna. Jeśli opłacisz ją po tym czasie, to <b>twoja kasa zwyczajnie przepadnie</b>, gdyż zarezerwowane sloty zostaną uwolnione dla innych kupujących. Jeśli nie opłacisz faktury w tym czasie, zapomnij o niej i złóż kolejne zamówienie, do którego zostanie wygenerowana nowa faktura.</p>
+                			</div>
+        			</div>
+			</div>
 		</div>
 		<div class="col-md-3">
 
