--- a/src/Hyper/AdsBundle/Resources/views/Default/index.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Default/index.html.twig
@@ -7,6 +7,22 @@
 {% include "HyperAdsBundle:Default:heroUnit.html.twig" %}
 
 {% if is_granted("ROLE_USER") %}
+	<!--
+	<div class="row">
+		<div class="col-lg-12">
+			<div class="alert alert-danger">
+				<p>UWAGA! Mamy mały problem z silnikiem Acida, prosimy na razie powstrzymać się od zakupów. Zaraz wracamy!</p>
+			</div>
+		</div>
+	</div>
+	-->
+	<div class="row">
+		<div class="col-lg-12">
+			<div class="alert alert-warning">
+				<p>UWAGA! Gdyby wystąpił jakiś problem z płatnościami, prosimy o kontakt mailowy: reklama@hyperreal.biz</p>
+			</div>
+		</div>
+	</div>
     <div class="row">
         <div class="col-lg-4">
             <h2>{{ 'banners'|babel }}</h2>
