--- a/src/Hyper/AdsBundle/Resources/views/User/Banner/payInZone.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/User/Banner/payInZone.html.twig
@@ -24,6 +24,17 @@
         </div>
     </form>
 </div>
+                        <div class="alert alert-warning">
+                                <div class="row">
+                                        <div class="col-md-1">
+                                                <p><i class="fa fa-bell fa-3x"></i></p>
+                                        </div>
+                                        <div class="col-md-11">
+                                                <p>Na zapłacenie faktury masz tylko 2 godziny od momentu złożenia zamówienia! W opisie faktury widać godzinę, do której jest ważna. Jeśli opłacisz ją po tym czasie, to <b>twoja kasa zwyczajnie przepadnie</b>, gdyż zarezerwowane sloty zostaną uwolnione dla innych kupujących. Jeśli nie opłacisz faktury w tym czasie, zapomnij o niej i złóż kolejne zamówienie, do którego zostanie wygenerowana nowa faktura.</p>
+                                        </div>
+                                </div>
+                        </div>
+
 <div class="row">
     <ol class="text-muted payment-info">
         <li>Odliczono dni, w których banner masz już wykupiony, oraz te, w których maksymalna liczba bannerów w strefie ({{ maxBannersInZone }}) jest już przekroczona;</li>
