example of github #12 resolution

--- a/src/Hyper/AdsBundle/Resources/views/Default/zonesInfo.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Default/zonesInfo.html.twig
@@ -46,7 +46,7 @@
             {% endif %}
             <td>{{ zone.name }}</td>
             <td>{{ zone.maxWidth }} x {{ zone.maxHeight }}</td>
-            <td>{{ zone.dailyPrice|number_format(2, ',', '.') }} {{ default_currency }}</td>
+            <td>{{ zone.dailyRegularPrice|number_format(2, ',', '.') }} {{ default_currency }}</td>
             <td>{{ zone.dailyPrice|number_format(2, ',', '.') }} {{ default_currency }}</td>
         </tr>
         {% endfor %}
