--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,12 +5,12 @@
         <title>{% block title %}Welcome!{% endblock %} - {{ page_title|babel }}</title>
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
-        <link href='http://fonts.googleapis.com/css?family=Headland+One&subset=latin-ext' rel='stylesheet' type='text/css'>
-        <script type="text/javascript" src="{{ asset('components/bootstrap/dist/js/bootstrap.min.js') }}"></script>
+        <link href='https://fonts.googleapis.com/css?family=Headland+One&subset=latin-ext' rel='stylesheet' type='text/css'>
         <script type="text/javascript" src="{{ asset('components/jquery/jquery.min.js') }}"></script>
+        <script type="text/javascript" src="{{ asset('components/bootstrap/dist/js/bootstrap.min.js') }}"></script>
         <script type="text/javascript" src="{{ asset('components/fancybox/source/jquery.fancybox.pack.js') }}"></script>
         <link rel="stylesheet" href="{{ asset('components/fancybox/source/jquery.fancybox.css') }}" type="text/css" media="screen" />
-        <link rel="stylesheet" type="text/css" href="{{ asset('bundles/hyperads/css/main.min.css') }}" media="screen" />
+        <link rel="stylesheet" type="text/css" href="{{ asset('bundles/hyperads/css/main.css') }}" media="screen" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
